--- a/dark.css
+++ b/dark.css
@@ -1,3 +1,9 @@
-body {
-  background-color: #20252a !important;
+body,textarea,input,button,th{
+  background-color: black !important;
+  color:#c8c8c8 !important;
+  border-color: #c8c8c8 !important;
+}
+
+hr{
+  border-color:#c8c8c8 !important
 }
