--- a/main.css
+++ b/main.css
@@ -1,5 +1,4 @@
 /* stylelint-disable comment-empty-line-before,length-zero-no-unit, selector-list-comma-newline-after, selector-combinator-space-before, selector-combinator-space-after  */
-
 body {
   padding: 1em;
 }
@@ -183,4 +182,46 @@ td, th {
 
 div.ui-tooltip {
   max-width: 100%;
+}
+
+.firstLayer {
+  display: table;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  pointer-events: none;
+}
+
+.secondLayer {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.thirdLayer {
+  margin-left: auto;
+  margin-right: auto;
+  /* width: 400px; */
+  border: 1px solid black;
+  background-color: white;
+  padding: 1%;
+  pointer-events: all;
+}
+
+u {
+  text-decoration: none;
+  box-shadow: inset 0 0px 0 white, inset 0 -2px 0 black
+}
+
+.graphNextLevel {
+  border: 1px solid gray;
+  display: inline-table;
+  cursor: pointer;
+}
+
+.center {
+  position: relative;
+  width: 100%;
+  text-align: center;
 }
