--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 ;
 }
 
-.nav#myTab {
+.nav#myTab, #statsHeader {
   font-family: "Consolas";
   font-weight: 600;
 }
@@ -14,13 +14,11 @@
 
 .nav .nav-item .nav-link.active {
   color: #495057;
-  border-bottom-color: rgba(255, 0, 0, 0.5);
+  border-bottom-color: #ff0000a6;
   border-bottom-width: 1px;
   border-top-color: rgba(0, 0, 0, 0);
-}
-
-.nav .nav-item .nav-link:hover {
-  background-color: #e3e6e7;
+  -webkit-box-shadow: inset 0 0 3 #676464;
+  box-shadow: inset 0 0 3px #676464;
 }
 
 .fluffyContainer {
@@ -37,6 +35,7 @@ label {
   margin: 20px 0;
   position: relative;
   display: inline-block;
+  color: #2b2b2b;
 }
 
 label > span {
@@ -72,6 +71,14 @@ td, th {
   color: #495057;
   background-color: #e9ecef;
   border-color: #dee2e6;
+}
+
+#TableHead > tr > th {
+  background-color: #e9ecef;
+}
+
+#OtherStats > label > input {
+  height: calc(0.5em + 0.75rem + 2px);
 }
 
 /*!
@@ -1738,7 +1745,7 @@ pre code {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #212529;
+  color: #495057;
 }
 
 .table th,
@@ -1784,12 +1791,12 @@ pre code {
 }
 
 .table-striped tbody tr:nth-of-type(odd) {
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: pink;
 }
 
 .table-hover tbody tr:hover {
-  color: #212529;
-  background-color: rgba(0, 0, 0, 0.075);
+  color: #495057;
+  background-color: #e9ecef;
 }
 
 .table-primary,
@@ -1971,16 +1978,16 @@ pre code {
 .table-active,
 .table-active > th,
 .table-active > td {
-  background-color: rgba(0, 0, 0, 0.075);
+  background-color: #e9ecef;
 }
 
 .table-hover .table-active:hover {
-  background-color: rgba(0, 0, 0, 0.075);
+  background-color: #dadfe4;
 }
 
 .table-hover .table-active:hover > td,
 .table-hover .table-active:hover > th {
-  background-color: rgba(0, 0, 0, 0.075);
+  background-color: #dadfe4;
 }
 
 .table .thead-dark th {
