--- a/css/main.scss
+++ b/css/main.scss
@@ -1,10 +1,17 @@
 $nav-tabs-border-radius: 0rem;
+$tableheader: #e9ecef;
+$table-active-border-color: #e9ecef;
+$table-accent-bg :pink !default;
+$table-hover-bg: $table-active-border-color;
+$table-color:  #495057;
+
 
 :root {
     --myColor: red
 }
 
-.nav#myTab {
+
+.nav#myTab,#statsHeader {
     // line-height: 3;
     font-family: "Consolas";
     font-weight: 600;
@@ -16,14 +23,16 @@ $nav-tabs-border-radius: 0rem;
 
 .nav .nav-item .nav-link.active {
     color: #495057;
-    border-bottom-color: rgba(255, 0, 0, 0.5);
+    border-bottom-color: #ff0000a6;
     border-bottom-width: 1px;
-    border-top-color: rgba(0,0,0,0)
+    border-top-color: rgba(0, 0, 0, 0);
+    -webkit-box-shadow: inset 0 0 3 #676464;
+    box-shadow: inset 0 0 3px #676464;
 }
 
-.nav .nav-item .nav-link:hover {
-    background-color: #e3e6e7;
-}
+// .nav .nav-item .nav-link:hover {
+//     background-color: #e3e6e7;
+// }
 
 .fluffyContainer {
     word-break: break-all;
@@ -39,6 +48,7 @@ label {
   margin:20px 0;
   position:relative;
   display:inline-block;
+  color: #2b2b2b;
 }
   
 label>span {
@@ -76,8 +86,17 @@ td,th {
 
 .levelRows { 
     color: #495057;
-    background-color: #e9ecef;
+    background-color: $tableheader;
     border-color: #dee2e6;
 }
+
+#TableHead>tr>th{
+    background-color: $tableheader;
+}
+
+#OtherStats>label>input{
+    height: calc(0.5em + 0.75rem + 2px);
+}
+
 
 @import "C:/Users/P/node_modules/bootstrap/scss/bootstrap.scss";
