--- a/css/dark.css
+++ b/css/dark.css
@@ -1,6 +1,6 @@
 :root {
   --daily-width: 5.415vw;
-  --daily-margin: 0.2vw;
+  --daily-margin: 0vw;
   --filter-width: 8vw;
   --filter-height: 1.6vw;
   --filter-margin: 0.1vw;
@@ -13,15 +13,15 @@
 #statsHeader {
   font-family: "Consolas";
   font-weight: 600;
-  color: #c8c8c8;
+  color: #8899a6;
 }
 
 .nav .nav-item .nav-link {
-  color: #c8c8c8;
+  color: #8899a6;
 }
 
 .nav .nav-item .nav-link.active {
-  color: black;
+  color: #0C141B;
   border-bottom-color: #ff0000a6;
   border-bottom-width: 1px;
   border-top-color: rgba(0, 0, 0, 0);
@@ -49,7 +49,7 @@ label {
   margin: 20px 0;
   position: relative;
   display: inline-block;
-  color: #c8c8c8;
+  color: #8899a6;
 }
 
 .dropdown-item.active,
@@ -89,13 +89,13 @@ th {
 }
 
 .levelRows {
-  color: #c8c8c8;
-  background-color: black;
+  color: #8899a6;
+  background-color: #101f2c;
   border-color: #dee2e6;
 }
 
 #TableHead > tr > th {
-  background-color: black;
+  background-color: #101f2c;
 }
 
 #OtherStats > label > input {
@@ -134,10 +134,9 @@ th {
 }
 
 .daily {
-  border-radius: 10%;
-  background-color: black;
-  border: 1px solid gray;
-  color: black;
+  background-color: #0C141B;
+  border: 1px solid #0C141B;
+  color: #0C141B;
   cursor: pointer;
   position: relative;
   width: calc(var(--daily-width) - var(--daily-margin) * 2);
@@ -159,13 +158,13 @@ button,
 }
 
 .daily-empty {
-  color: #c8c8c8;
+  color: #cbdbe6;
   border: none;
   visibility: hidden;
 }
 
 .filter {
-  background-color: #c8c8c8;
+  background-color: #cbdbe6;
   border: 1px solid gray;
   border-radius: 5%;
   cursor: pointer;
@@ -226,7 +225,7 @@ a#navbarDropdown.nav-link.dropdown-toggle.active.show::after {
 }
 
 .input-shadow.custom-select#InstantUpdating {
-  background-color: #c8c8c8;
+  background-color: #cbdbe6;
   background: none;
 }
 
@@ -236,19 +235,32 @@ svg {
 }
 
 svg path {
-  fill: #c8c8c8 !important;
+  fill: #8899a6 !important;
 }
 
 html body {
-  background-color: black;
+  background-color: #0C141B;
 }
 
 .dailyHeader {
-  color: #c8c8c8;
+  color: #8899a6;
 }
 
 .nav-tabs .nav-link.active.show {
-  background-color: #c8c8c8;
+  background-color: #e8e8e8;
+}
+
+div.show > div.dropdown-menu.dropdown-menu-right.show,
+#myTab > span > div,
+#InstantUpdating > option {
+  background-color: #0C141B;
+  color: #8899a6;
+  border: 1px solid #38444d;
+}
+
+div.show > div.dropdown-menu.dropdown-menu-right.show > a:hover,
+#myTab > span > div > a:hover {
+  background-color: #101f2c;
 }
 
 /*!
@@ -1915,23 +1927,23 @@ pre code {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #c8c8c8;
+  color: #8899a6;
 }
 
 .table th,
 .table td {
   padding: 0.75rem;
   vertical-align: top;
-  border-top: 1px solid #c8c8c8;
+  border-top: 1px solid #38444d;
 }
 
 .table thead th {
   vertical-align: bottom;
-  border-bottom: 2px solid #c8c8c8;
+  border-bottom: 2px solid #38444d;
 }
 
 .table tbody + tbody {
-  border-top: 2px solid #c8c8c8;
+  border-top: 2px solid #38444d;
 }
 
 .table-sm th,
@@ -1940,12 +1952,12 @@ pre code {
 }
 
 .table-bordered {
-  border: 1px solid #c8c8c8;
+  border: 1px solid #38444d;
 }
 
 .table-bordered th,
 .table-bordered td {
-  border: 1px solid #c8c8c8;
+  border: 1px solid #38444d;
 }
 
 .table-bordered thead th,
@@ -1961,11 +1973,11 @@ pre code {
 }
 
 .table-striped tbody tr:nth-of-type(odd) {
-  background-color: pink;
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 .table-hover tbody tr:hover {
-  color: #c8c8c8;
+  color: #8899a6;
   background-color: black;
 }
 
@@ -2169,7 +2181,7 @@ pre code {
 .table .thead-light th {
   color: #495057;
   background-color: #e9ecef;
-  border-color: #c8c8c8;
+  border-color: #38444d;
 }
 
 .table-dark {
@@ -2263,10 +2275,10 @@ pre code {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #c8c8c8;
-  background-color: black;
+  color: #8899a6;
+  background-color: #0C141B;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
+  border: 1px solid #8899a6;
   border-radius: 0.25rem;
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2287,8 +2299,8 @@ pre code {
 }
 
 .form-control:focus {
-  color: #c8c8c8;
-  background-color: black;
+  color: #8899a6;
+  background-color: #0C141B;
   border-color: #80bdff;
   outline: 0;
   -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
@@ -2316,13 +2328,13 @@ pre code {
 }
 
 .form-control:disabled, .form-control[readonly] {
-  background-color: black;
+  background-color: #0C141B;
   opacity: 1;
 }
 
 select.form-control:focus::-ms-value {
-  color: #c8c8c8;
-  background-color: black;
+  color: #8899a6;
+  background-color: #0C141B;
 }
 
 .form-control-file,
@@ -2510,7 +2522,7 @@ textarea.form-control {
 .was-validated .custom-select:valid, .custom-select.is-valid {
   border-color: #28a745;
   padding-right: calc((1em + 0.75rem) * 3 / 4 + 1.75rem);
-  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2328a745' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e") black no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%2328a745' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e") #0C141B no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
 .was-validated .custom-select:valid:focus, .custom-select.is-valid:focus {
@@ -2637,7 +2649,7 @@ textarea.form-control {
 .was-validated .custom-select:invalid, .custom-select.is-invalid {
   border-color: #dc3545;
   padding-right: calc((1em + 0.75rem) * 3 / 4 + 1.75rem);
-  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23dc3545' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23dc3545' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E") black no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23dc3545' viewBox='-2 -2 7 7'%3e%3cpath stroke='%23dc3545' d='M0 0l3 3m0-3L0 3'/%3e%3ccircle r='.5'/%3e%3ccircle cx='3' r='.5'/%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E") #0C141B no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
 .was-validated .custom-select:invalid:focus, .custom-select.is-invalid:focus {
@@ -4014,11 +4026,11 @@ input[type="button"].btn-block {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #c8c8c8;
+  color: #8899a6;
   text-align: center;
   white-space: nowrap;
-  background-color: #e9ecef;
-  border: 1px solid #ced4da;
+  background-color: #0C141B;
+  border: 1px solid #8899a6;
   border-radius: 0.25rem;
 }
 
@@ -4132,7 +4144,7 @@ input[type="button"].btn-block {
 }
 
 .custom-control-input:disabled ~ .custom-control-label::before {
-  background-color: black;
+  background-color: #0C141B;
 }
 
 .custom-control-label {
@@ -4150,7 +4162,7 @@ input[type="button"].btn-block {
   height: 1rem;
   pointer-events: none;
   content: "";
-  background-color: black;
+  background-color: #0C141B;
   border: #adb5bd solid 1px;
 }
 
@@ -4234,7 +4246,7 @@ input[type="button"].btn-block {
 }
 
 .custom-switch .custom-control-input:checked ~ .custom-control-label::after {
-  background-color: black;
+  background-color: #0C141B;
   -webkit-transform: translateX(0.75rem);
           transform: translateX(0.75rem);
 }
@@ -4251,11 +4263,11 @@ input[type="button"].btn-block {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #c8c8c8;
+  color: #8899a6;
   vertical-align: middle;
   background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px;
-  background-color: black;
-  border: 1px solid #ced4da;
+  background-color: #0C141B;
+  border: 1px solid #8899a6;
   border-radius: 0.25rem;
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -4270,8 +4282,8 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus::-ms-value {
-  color: #c8c8c8;
-  background-color: black;
+  color: #8899a6;
+  background-color: #0C141B;
 }
 
 .custom-select[multiple], .custom-select[size]:not([size="1"]) {
@@ -4329,7 +4341,7 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:disabled ~ .custom-file-label {
-  background-color: black;
+  background-color: #0C141B;
 }
 
 .custom-file-input:lang(en) ~ .custom-file-label::after {
@@ -4350,9 +4362,9 @@ input[type="button"].btn-block {
   padding: 0.375rem 0.75rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #c8c8c8;
-  background-color: black;
-  border: 1px solid #ced4da;
+  color: #8899a6;
+  background-color: #0C141B;
+  border: 1px solid #8899a6;
   border-radius: 0.25rem;
 }
 
@@ -4366,9 +4378,9 @@ input[type="button"].btn-block {
   height: calc(1.5em + 0.75rem);
   padding: 0.375rem 0.75rem;
   line-height: 1.5;
-  color: #c8c8c8;
+  color: #8899a6;
   content: "Browse";
-  background-color: #e9ecef;
+  background-color: #0C141B;
   border-left: inherit;
   border-radius: 0 0.25rem 0.25rem 0;
 }
@@ -4588,7 +4600,7 @@ input[type="button"].btn-block {
 }
 
 .nav-tabs {
-  border-bottom: 1px solid #dee2e6;
+  border-bottom: 1px solid #38444d;
 }
 
 .nav-tabs .nav-item {
@@ -4602,7 +4614,7 @@ input[type="button"].btn-block {
 }
 
 .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
-  border-color: #e9ecef #e9ecef #dee2e6;
+  border-color: #38444d;
 }
 
 .nav-tabs .nav-link.disabled {
@@ -4615,7 +4627,7 @@ input[type="button"].btn-block {
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
   background-color: #fff;
-  border-color: #dee2e6 #dee2e6 #fff;
+  border-color: #38444d;
 }
 
 .nav-tabs .dropdown-menu {
@@ -10807,11 +10819,11 @@ a.text-dark:hover, a.text-dark:focus {
   .table-dark td,
   .table-dark thead th,
   .table-dark tbody + tbody {
-    border-color: #c8c8c8;
+    border-color: #38444d;
   }
   .table .thead-dark th {
     color: inherit;
-    border-color: #c8c8c8;
+    border-color: #38444d;
   }
 }
 /*# sourceMappingURL=dark.css.map */
