--- a/css/dark.scss
+++ b/css/dark.scss
@@ -130,7 +130,8 @@ label>span {
 }
 
 input+span,
-select+span {
+select+span,
+div+span {
     opacity: 1;
     transform: scale(0.75) translateY(-112%) translateX(-20px);
 }
